# todo-list-api

./: .env.example  .gitignore  LICENSE  README.md  create_tables.py  docker-compose.yml  main.py  pyproject.toml  requiments.txt  requirements.txt
src/: __init__.py
src/configs/: app_config.py  message_config.py
src/database/: session_database.py
src/models/: todo_model.py  user_model.py
src/routers/: root_router.py
tests/: conftest.py  root_router_test.py
