[project]
name = "todo-list-api"
version = "0.1.0"
description = "This project is a simple API designed for practicing programming. The goal was to create a REST API in which users could manage their tasks."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
test = [
    "pytest>=9.0.3",
]
